<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_marginBottom="-200dp"
    android:background="@drawable/shape"
    tools:context=".EditBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:paddingLeft="8dp"
                android:id="@+id/editGenre"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="Genre"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editYear" />

            <EditText
                android:paddingLeft="8dp"
                android:id="@+id/editTitle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="Title"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover_image" />

            <EditText
                android:id="@+id/editAuthor"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="Author"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTitle" />

            <EditText
                android:id="@+id/editISBN"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="ISBN"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAuthor" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="Year"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editISBN" />

            <EditText
                android:id="@+id/editDes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/honeydew"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
                android:ems="10"
                android:hint="Description"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/azure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editGenre" />

            <Button
                android:id="@+id/scan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedbutton"
                android:text="Scan"
                android:textColor="@color/ghost_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDes" />

            <Button
                android:id="@+id/save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedbuttongray"
                android:onClick="save"
                android:text="Save"
                android:textColor="@color/ghost_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scan" />

            <Button
                android:id="@+id/cancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/roundedbutton"
                android:text="Cancel"
                android:textColor="@color/ghost_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save"
                app:layout_constraintVertical_bias="0.314" />

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="147dp"
                android:layout_height="171dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/shape" />

            <Button
                android:id="@+id/add_cover_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="ADD COVER IMAGE"
                android:textColor="@color/ghost_white"
                android:background="@drawable/roundedbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_image"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_other_images_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="ADD OTHER IMAGES"
                android:textColor="@color/ghost_white"
                android:background="@drawable/roundedbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cover_image"
                app:layout_constraintTop_toBottomOf="@+id/add_cover_button" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>